Add CLOG_F_PID to print __progname(getpid()) for each log line.
ok marco@

--- a/clog.3
+++ b/clog.3
@@ -76,6 +76,8 @@ Log source file name.
 Log source function name.
 .It Cm CLOG_F_LINE
 Log source file line number.
+.It Cm CLOG_F_PID
+Log program name and PID.
 .It Cm CLOG_F_DATE
 Log date in
 .Xr ctime 3
