--- a/clog.3
+++ b/clog.3
@@ -26,6 +26,8 @@
 .Fn clog_init "int no_syslog"
 .Ft int
 .Fn clog_set_flags "u_int32_t flags"
+.Ft int
+.Fn clog_set_logfile "const char *logfile"
 .Ft void
 .Fn clog_set_mask "u_int64_t mask"
 .Ft void
@@ -87,6 +89,14 @@ format.
 .It Cm CLOG_F_DTIME
 Log delta time from previous log function invocation.
 This time delta has micro second resolution.
+.It Cm CLOG_F_FILOG
+Log to
+.Fa logfile
+which is given as an argument to
+.Fn clog_set_logfile .
+The
+.Fn clog_set_logfile
+function must be called before setting this flag.
 .It Cm CLOG_F_STDERR
 Log to
 .Fa stderr .
@@ -110,6 +120,13 @@ Enable debug logging.
 .Pp
 Only supported flags can be set and this function will return 0 on success and
 1 on failure.
+.Pp
+.Fn clog_set_logfile
+sets the log file to log to when
+.Fa CLOG_F_FILOG
+is set.  This function must be called before setting
+.Fa CLOG_F_FILOG .
+The returned value is 0 on success and 1 on failure.
 .Pp
 .Fn clog_set_mask
 sets external debug mask.
