Confomal Systems -> Conformal Systems LLC and use info@ email for upstream, but package-discuss@ for packagine releated fields.

--- a/config/debian/changelog
+++ b/config/debian/changelog
@@ -2,4 +2,4 @@ clog (0.3.4-1) unstable; urgency=low
 
   * Initial release
 
- -- Conformal Systems <package-discuss@conformal.com>  Mon, 27 Jun 2011 17:20:38 -0500
+ -- Conformal Systems LLC <package-discuss@conformal.com>  Mon, 27 Jun 2011 17:20:38 -0500
