mandoc -Tlint cleaning

--- a/clog.3
+++ b/clog.3
@@ -13,7 +13,7 @@
 .\" ACTION OF CONTRACT, NEGLIGENCE OR OTHER TORTIOUS ACTION, ARISING OUT OF
 .\" OR IN CONNECTION WITH THE USE OR PERFORMANCE OF THIS SOFTWARE.
 .\"
-.Dd $Mdocdate$
+.Dd $Mdocdate: October 10 2011 $
 .Dt CLOG 3
 .Os
 .Sh NAME
@@ -205,7 +205,6 @@ output, and are functionally equivalent to the
 and
 .Xr warn 3
 family of functions.
-.Pp
 .Sh SEE ALSO
 .Xr printf 3
 .Xr ctime 3
