--- a/config/debian/changelog
+++ b/config/debian/changelog
@@ -1,3 +1,14 @@
+clog (0.4.0-1) unstable; urgency=low
+
+  * Make clog.h self-contained
+  * Add addition C<LEVEL> functions to mirror syslog priority levels
+  * Modify time output for CLOG_F_DATE to include seconds
+  * Several man page updates and corrections
+  * Add build versioning
+  * Other minor cleanup and bug fixes
+
+ -- Conformal Systems <package-discuss@conformal.com>  Thu, 27 Oct 2011 17:47:40 -0500
+
 clog (0.3.5-1) unstable; urgency=low
 
   * Add logic to install man pages
