Add clog_set_log_callback() so a user can provide their own logging function.
Provide clog_default_log_callback as the default (and an exported option so it
may be reset).

pointless example:

void
log_ignore_below_crit(void *state, int flags, int prio,
    const char *message, va_list args)
{

	/*
	 * Posix doesn't define that the LOG_* defines are ordered in any way
	 * numerically, don't depend upon it.
	 */
	switch (prio) {
	case LOG_DEBUG:
	case LOG_INFO:
	case LOG_NOTICE:
	case LOG_WARNING:
		/* ignore */
		break;
	default:
		clog_default_log_callback(state, flags, prio, message, args);
	}
}

in application:

clog_set_log_callback(log_ignore_below_crit, NULL);

This rides the previous minor bump.

--- a/clog.3
+++ b/clog.3
@@ -32,6 +32,8 @@
 .Ft const char *
 .Fn clog_get_logfile "void"
 .Ft void
+.Fn clog_set_log_callback "void (*cb)(void *, int, int, const char *, va_list)" "void *state"
+.Ft void
 .Fn clog_set_mask "uint64_t mask"
 .Ft uint64_t
 .Fn clog_get_mask "void"
@@ -157,6 +159,19 @@ The current debug mask may be fetched with
 .Fn clog_get_mask ,
 alternatively whether a bit is set may be tested with
 .Fn clog_mask_is_set .
+.Pp
+.Fn clog_set_log_callback
+sets an optional logging callback and state pointer that will be used instead
+of internal logging functions to display the message. The callback takes as
+arguments the
+state pointer, current clog flags, message priority (as a
+.Xr syslog 3
+priority), message and va_list of message parameters.
+To restore the default behaviour this function may be called with
+.Fn clog_default_log_callback
+and
+.Va NULL
+as the parameter.
 .Pp
 .Fn clog_version
 gets the current version of the library at run time.
