--- a/config/debian/changelog
+++ b/config/debian/changelog
@@ -1,3 +1,9 @@
+clog (0.6.1-1) unstable; urgency=low
+
+  * Unbreak package build
+
+ -- Conformal Systems <package-discuss@conformal.com>  Tue, 08 May 2012 13:46:38 -0500
+
 clog (0.6.0-1) unstable; urgency=low
 
   * Add functions to get the current mask logfile and flags
