--- a/config/debian/changelog
+++ b/config/debian/changelog
@@ -1,3 +1,10 @@
+clog (0.6.2-1) unstable; urgency=low
+
+  * Support clang builds
+  * Fix non-release build versioning
+
+ -- Conformal Systems <package-discuss@conformal.com>  Tue, 17 Jul 2012 19:10:27 -0500
+
 clog (0.6.1-1) unstable; urgency=low
 
   * Unbreak package build
