--- a/config/debian/changelog
+++ b/config/debian/changelog
@@ -1,3 +1,11 @@
+clog (0.6.3-1) unstable; urgency=low
+
+  * Add support for Bitrig
+  * Add support for cygwin
+  * Remove the 'version: ' prefix from clog_verstring
+
+ -- Conformal Systems <package-discuss@conformal.com>  Fri, 04 Jan 2013 17:10:45 -0600
+
 clog (0.6.2-1) unstable; urgency=low
 
   * Support clang builds
