--- a/config/debian/changelog
+++ b/config/debian/changelog
@@ -1,3 +1,9 @@
+clog (0.6.4-1) unstable; urgency=low
+
+  * Fix OpenBSD port Makefile for modern OpenBSD ports
+
+ -- Conformal Systems <package-discuss@conformal.com>  Fri, 31 May 2013 10:39:01 -0500
+
 clog (0.6.3-1) unstable; urgency=low
 
   * Add support for Bitrig
